--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -8,14 +8,14 @@
     <meta http-equiv="Permissions-Policy" content="interest-cohort=()">
     <meta
       name="description"
-      content="Ajay o s | web server"
+      content="SOWEHA | web server"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link
       href="https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700;800&display=swap"
       rel="stylesheet"
     />
-    <title>Ajay o s</title>
+    <title>SOWEHA</title>
   </head>
   <body>
     <script>
