--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="https://github.com/Ajayos.png" />
+    <link rel="icon" href="https://github.com/soweha.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta http-equiv="Permissions-Policy" content="interest-cohort=()">
@@ -19,7 +19,7 @@
   </head>
   <body>
     <script>
-      window.backendUrl = 'https://ajayos-server.onrender.com';
+      window.backendUrl = 'http://localhost:3001/';
     </script>  
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
